Colab을 통해 생성됨

--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOtuYbzRZMPE/xTv0Bj+I9P",
+      "authorship_tag": "ABX9TyONTL2mqIds1y7cYODjiwLQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -635,6 +635,375 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Vision Transformer (ViT)\n",
+        "\n",
+        "[Dosovitskiy et. al.](https://arxiv.org/abs/2010.11929) showed that applying a transformer model on a sequence of image patches (referred to as Vision Transformer) not only achieves impressive performance but also scales more effectively than convolutional neural networks when trained on large datasets. We will build a version of Vision Transformer using our existing implementation of transformer components and train it on the CIFAR-10 dataset."
+      ],
+      "metadata": {
+        "id": "2yvoi_k-GVg0"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Vision Transformer converts input image into a sequence of patches of fixed size and embed each patch into a latent vector. In `cs231/transformer_layers.py`, complete the implementation of `PatchEmbedding` and test it below. You should see relative error less than 1e-4."
+      ],
+      "metadata": {
+        "id": "WE4HK0DcGYCX"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from cs231n.transformer_layers import PatchEmbedding\n",
+        "\n",
+        "torch.manual_seed(231)\n",
+        "np.random.seed(231)\n",
+        "\n",
+        "N = 2\n",
+        "HW = 16\n",
+        "PS = 8\n",
+        "D = 8\n",
+        "\n",
+        "patch_embedding = PatchEmbedding(\n",
+        "    img_size=HW,\n",
+        "    patch_size=PS,\n",
+        "    embed_dim=D\n",
+        ")\n",
+        "\n",
+        "x = torch.randn(N, 3, HW, HW)\n",
+        "output = patch_embedding(x)\n",
+        "\n",
+        "\n",
+        "expected_output = np.asarray([\n",
+        "        [[-0.6312704 ,  0.02531429,  0.6112642 , -0.49089882,\n",
+        "          0.01412961, -0.6959372 , -0.32862484, -0.45402682],\n",
+        "        [ 0.18816411, -0.08142513, -0.9829535 , -0.23975623,\n",
+        "         -0.23109074,  0.97950286, -0.40997326,  0.7457837 ],\n",
+        "        [ 0.01810865,  0.15780598, -0.91804236,  0.36185235,\n",
+        "          0.8379501 ,  1.0191797 , -0.29667392,  0.20322265],\n",
+        "        [-0.18697818, -0.45137224, -0.40339014, -1.4381214 ,\n",
+        "         -0.43450755,  0.7651071 , -0.83683825, -0.16360264]],\n",
+        "\n",
+        "       [[-0.39786366,  0.16201034, -0.19008337, -1.0602452 ,\n",
+        "         -0.28693503,  0.09791763,  0.26614824,  0.41781986],\n",
+        "        [ 0.35146567, -0.4469593 , -0.1841726 ,  0.45757473,\n",
+        "         -0.61304873, -0.29104248, -0.16124889, -0.14987172],\n",
+        "        [-0.2996967 ,  0.27353522, -0.09929767,  0.01973832,\n",
+        "         -1.2312065 , -0.6374332 , -0.22963578,  0.55696607],\n",
+        "        [-0.93818814,  0.02465284, -0.21117875,  1.1860403 ,\n",
+        "         -0.06137538, -0.21062079, -0.094347  ,  0.50032747]]])\n",
+        "\n",
+        "print('error: ', rel_error(expected_output, output.detach().numpy()))"
+      ],
+      "metadata": {
+        "id": "eakxQ7XcGY8t"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The sequence of patch vectors is processed by transformer encoder layers, each consisting of a self-attention and a feed-forward module. Since all vectors attend to one another, attention masking is not strictly necessary. However, we still implement it for the sake of consistency.\n",
+        "\n",
+        "Implement `TransformerEncoderLayer` in `cs231n/transformer_layers.py` and test it below. You should see relative error less than 1e-6.\n"
+      ],
+      "metadata": {
+        "id": "jXOYjPY5Gak4"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.manual_seed(231)\n",
+        "np.random.seed(231)\n",
+        "\n",
+        "from cs231n.transformer_layers import TransformerEncoderLayer\n",
+        "\n",
+        "N, T, TM, D = 1, 4, 5, 12\n",
+        "\n",
+        "encoder_layer = TransformerEncoderLayer(D, 2, 4*D)\n",
+        "x = torch.randn(N, T, D)\n",
+        "x_mask = torch.randn(T, T) < 0.5\n",
+        "\n",
+        "output = encoder_layer(x, x_mask)\n",
+        "\n",
+        "expected_output = np.asarray([\n",
+        "    [[-0.43529928, -0.204897, 0.45693663, -1.1355408, 1.8000772,\n",
+        "      0.24467856, 0.8525885, -0.53586316, -1.5606489, -1.207276,\n",
+        "      1.3986266, 0.3266182],\n",
+        "     [0.06928468, 1.1030475, -0.9902548, -0.34333378, -2.1073136,\n",
+        "      1.1960536, 0.16573538, -1.1772276, 1.2644588, -0.27311313,\n",
+        "      0.29650143, 0.7961618],\n",
+        "     [0.28310525, 0.69066685, -1.2264299, 1.0175265, -2.0517688,\n",
+        "     -0.10330413, -0.5355796, -0.2696466, 0.13948536, 2.0408154,\n",
+        "      0.27095756, -0.25582793],\n",
+        "     [-0.58568114, 0.8019579, -0.9128079, -1.6816932, 1.1572194,\n",
+        "      0.39162305, 0.58195484, 0.7043353, -1.27042, -1.1870497,\n",
+        "      0.9784279, 1.0221335]]\n",
+        "])\n",
+        "\n",
+        "print('error: ', rel_error(expected_output, output.detach().numpy()))"
+      ],
+      "metadata": {
+        "id": "MxGFAZUoGcNU"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Take a look at the `VisionTransformer` implementation in `cs231n/classifiers/transformer.py`.\n",
+        "\n",
+        "For classification, ViT divides the input image into patches and processes the sequence of patch vectors using a transformer. Finally, all the patch vectors are average-pooled and used to predict the image class. We will use the same 1D sinusoidal positional encoding to inject ordering information, though 2D sinusoidal and learned positional encodings are also valid choices.\n",
+        "\n",
+        "Complete the ViT forward pass and test it below. You should see relative error less than 1e-6."
+      ],
+      "metadata": {
+        "id": "BfBa4ICDGdwd"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.manual_seed(231)\n",
+        "np.random.seed(231)\n",
+        "from cs231n.classifiers.transformer import VisionTransformer\n",
+        "\n",
+        "imgs = torch.randn(3, 3, 32, 32)\n",
+        "transformer = VisionTransformer()\n",
+        "scores = transformer(imgs)\n",
+        "expected_scores = np.asarray(\n",
+        "    [[-0.13013132,  0.13652277, -0.04656096, -0.16443546, -0.08946665,\n",
+        "        -0.10123537,  0.11047452,  0.01317241,  0.17256221,  0.16230097],\n",
+        "       [-0.11988413,  0.20006064, -0.04028708, -0.06937674, -0.07828291,\n",
+        "        -0.13545093,  0.18698244,  0.01878054,  0.14309685,  0.03245382],\n",
+        "       [-0.11540816,  0.21416159, -0.07740889, -0.08336161, -0.1645808 ,\n",
+        "        -0.12318538,  0.18035144,  0.05492767,  0.15997584,  0.12134959]])\n",
+        "print('scores error: ', rel_error(expected_scores, scores.detach().numpy()))"
+      ],
+      "metadata": {
+        "id": "My0fdzgnGezR"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "We will first verify our implementation by overfitting it on one training batch."
+      ],
+      "metadata": {
+        "id": "Rpl6hRSBGgF5"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from torchvision import transforms\n",
+        "from torchvision.datasets import CIFAR10\n",
+        "from tqdm.auto import tqdm\n",
+        "from torch.utils.data import DataLoader\n",
+        "\n",
+        "train_data = CIFAR10(root='data', train=True, transform=transforms.ToTensor(), download=True)\n",
+        "test_data = CIFAR10(root='data', train=False, transform=transforms.ToTensor(), download=True)"
+      ],
+      "metadata": {
+        "id": "YvFNZat-GhbC"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "learning_rate = 5e-4  # Experiment with this\n",
+        "weight_decay = 1e-4  # Experiment with this\n",
+        "\n",
+        "\n",
+        "batch = next(iter(DataLoader(train_data, batch_size=64, shuffle=False)))\n",
+        "model = VisionTransformer(dropout=0.0)\n",
+        "loss_criterion = torch.nn.CrossEntropyLoss()\n",
+        "optimizer = torch.optim.Adam(model.parameters(), lr=learning_rate, weight_decay=weight_decay)\n",
+        "model.train()\n",
+        "\n",
+        "epochs = 100\n",
+        "for epoch in range(epochs):\n",
+        "    imgs, target = batch\n",
+        "    out = model(imgs)\n",
+        "    loss = loss_criterion(out, target)\n",
+        "\n",
+        "    optimizer.zero_grad()\n",
+        "    loss.backward()\n",
+        "    optimizer.step()\n",
+        "\n",
+        "    top1 = (out.argmax(-1) == target).float().mean().item()\n",
+        "    if epoch % 10 == 0:\n",
+        "      print(f\"[{epoch}/{epochs}] Loss {loss.item():.6f}, Top-1 Accuracy: {top1:.3f}\")\n"
+      ],
+      "metadata": {
+        "id": "D8_2P4LCGiJt"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# You should get perfect 1.00 accuracy\n",
+        "print(f\"Overfitting ViT on one batch. Top-1 accuracy: {top1}\")"
+      ],
+      "metadata": {
+        "id": "GHrgqcW5Gjd3"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Now we will train it on the entire dataset."
+      ],
+      "metadata": {
+        "id": "0RBacsvEGkxy"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from cs231n.classification_solver_vit import ClassificationSolverViT\n",
+        "\n",
+        "############################################################################\n",
+        "# TODO: Train a Vision Transformer model that achieves over 0.45 test      #\n",
+        "# accuracy on CIFAR-10 after 2 epochs by adjusting the model architecture  #\n",
+        "# and/or training parameters as needed.                                    #\n",
+        "#                                                                          #\n",
+        "# Note: If you want to use a GPU runtime, go to `Runtime > Change runtime  #\n",
+        "# type` and set `Hardware accelerator` to `GPU`. This will reset Colab,    #\n",
+        "# so make sure to rerun the entire notebook from the beginning afterward.  #\n",
+        "############################################################################\n",
+        "\n",
+        "\n",
+        "learning_rate = 6e-4\n",
+        "weight_decay = 1e-4\n",
+        "batch_size = 64\n",
+        "\n",
+        "model = VisionTransformer(\n",
+        "  img_size=32,\n",
+        "  patch_size=8,\n",
+        "  in_channels=3,\n",
+        "  embed_dim=128,\n",
+        "  num_layers=6,\n",
+        "  num_heads=4,\n",
+        "  dim_feedforward=256, num_classes=10, dropout=0.1\n",
+        ")  # You may want to change the default params.\n",
+        "\n",
+        "\n",
+        "\n",
+        "################################################################################\n",
+        "#                                 END OF YOUR CODE                             #\n",
+        "################################################################################\n",
+        "\n",
+        "solver = ClassificationSolverViT(\n",
+        "    train_data=train_data,\n",
+        "    test_data=test_data,\n",
+        "    model=model,\n",
+        "    num_epochs = 2,  # Don't change this\n",
+        "    learning_rate = learning_rate,\n",
+        "    weight_decay = weight_decay,\n",
+        "    batch_size = batch_size,\n",
+        ")\n",
+        "\n",
+        "solver.train('cuda' if torch.cuda.is_available() else 'cpu')\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "l8CaUYoqGlfd"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(f\"Accuracy on test set: {solver.results['best_test_acc']}\")"
+      ],
+      "metadata": {
+        "id": "BSX9LoCmGmwq"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Inline Question 2\n",
+        "\n",
+        "Despite their recent success in large-scale image recognition tasks, ViTs often lag behind traditional CNNs when trained on smaller datasets. What underlying factor contribute to this performance gap? What techniques can be used to improve the performance of ViTs on small datasets?\n",
+        "\n",
+        "**Your Answer**:\n",
+        "The Vision Transformer (ViT) has a fundamentally different structure from CNNs, lacking the inductive biases that CNNs rely on for learning. Instead, ViT is a more flexible model in terms of representation. This means that ViT has no prior knowledge about \"which features are important,\" and must learn all relevant information directly from the data. As a result, if a sufficient amount of training data is not available, ViT can be more difficult to train and more prone to overfitting compared to CNNs.\n",
+        "\n",
+        "Furthermore, Transformer-based architectures typically have far more parameters than CNNs, which increases their need for large datasets to achieve stable and effective training.\n",
+        "\n",
+        "There are several ways to improve the performance of ViTs on small datasets. One fundamental approach is data augmentation. By applying various augmentation techniques—such as random cropping, flipping, rotation, and color jitter—to the available data, we can increase data diversity and improve generalization. Alternatively, a pretrained ViT model can be used. For instance, a ViT that has been trained on a large-scale dataset like ImageNet can be fine-tuned on a smaller dataset to achieve better performance.\n"
+      ],
+      "metadata": {
+        "id": "Fr8_yhM_GoC7"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Inline Question 3\n",
+        "\n",
+        "How does the computational cost of the self-attention layers in a ViT change if we independently make the following changes?\n",
+        "\n",
+        "(i) Double the hidden dimension.\n",
+        "(ii) Double the height and width of the input image.\n",
+        "(iii) Double the patch size.\n",
+        "(iv) Double the number of layers.\n",
+        "\n",
+        "**Your Answer**:\n",
+        "\n",
+        "Computational Cost Changes in ViT Self-Attention\n",
+        "In Vision Transformers (ViT), the input image is divided into patches, each of which is embedded and passed through the self-attention module.\n",
+        "The computational complexity of self-attention is given by: Complexity = 𝑂(𝑁^2⋅𝐷)\n",
+        "- 𝑁: number of patches\n",
+        "- 𝐷: hidden dimension (embedding size) <br> <br>\n",
+        "\n",
+        "**(i) Double the hidden dimension.** <br>\n",
+        "- D → 2D ⇒ O(N^2 ⋅2D) <br>\n",
+        "Computational cost increases by a factor of 2 <br> <br>\n",
+        "\n",
+        "**(ii) Double the height and width of the input image.** <br>\n",
+        "- Image size: 𝐻 × 𝑊 → 2𝐻 × 2𝑊\n",
+        "- With fixed patch size, number of patches increases: 𝑁 → 4𝑁 <br>\n",
+        "𝑂(𝑁^2⋅𝐷) → 𝑂((4𝑁)^2⋅𝐷)=𝑂(16𝑁^2⋅𝐷) <br>\n",
+        "Computational cost increases by a factor of 16 <br> <br>\n",
+        "\n",
+        "**(iii) Double the patch size.** <br>\n",
+        "- Image size remains fixed\n",
+        "- Patch size: 𝑃 × 𝑃 → 2𝑃 × 2𝑃\n",
+        "- Number of patches decreases: 𝑁 → 𝑁/4 <br>\n",
+        "𝑂(𝑁^2⋅𝐷) → 𝑂((𝑁/4)^2⋅𝐷)=𝑂((𝑁^2)/16⋅𝐷) <br>\n",
+        "Computational cost decreases by a factor of 16 <br> <br>\n",
+        "\n",
+        "**(iv) Double the number of layers.** <br>\n",
+        "- Number of layers: 𝐿 → 2𝐿 <br>\n",
+        "Since self-attention is computed per layer, Computational cost increases by a factor of 2\n"
+      ],
+      "metadata": {
+        "id": "snPsMMX3GpY2"
+      }
     }
   ]
 }
