--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -4,10 +4,11 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "T4",
+      "gpuType": "T4",ㅊ
       "authorship_tag": "ABX9TyONTL2mqIds1y7cYODjiwLQ",
       "include_colab_link": true
     },
+   "outputs": [],
     "kernelspec": {
       "name": "python3",
       "display_name": "Python 3"
