--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -23,24 +23,7 @@
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HBoxModel",
           "model_module_version": "1.5.0",
-          "state": {
-            "_dom_classes": [],
-            "_model_module": "@jupyter-widgets/controls",
-            "_model_module_version": "1.5.0",
-            "_model_name": "HBoxModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/controls",
-            "_view_module_version": "1.5.0",
-            "_view_name": "HBoxView",
-            "box_style": "",
-            "children": [
-              "IPY_MODEL_0d4a4b6be21a4cc7a4ae554aa735fc7e",
-              "IPY_MODEL_4bb1ce187ed2471d8235fb117b5cce7b",
-              "IPY_MODEL_f2c7e243ad9d4e6ba85b5e5bf3527f2f"
-            ],
-            "layout": "IPY_MODEL_b317b0e2fcd945a5b30c0fd4abff8636"
-          }
-        },
+          "state": { },
         "0d4a4b6be21a4cc7a4ae554aa735fc7e": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HTMLModel",
