--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -261,6 +261,7 @@
             "width": null
           }
         },
+        "state": {}
         "bc7b0d381a5849d6bc1f81a501aaa2ab": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "ProgressStyleModel",
