Colab을 통해 생성됨

--- a/Transformer_Captioning.ipynb
+++ b/Transformer_Captioning.ipynb
@@ -1018,7 +1018,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
         "id": "Myf9A3UK4TpM"
       },
@@ -1035,11 +1035,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
-        "id": "YU2pQigB9kxp"
+        "id": "YU2pQigB9kxp",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "7709328f-3215-499a-874d-cb49468d5468"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0/100] Loss 2.330371, Top-1 Accuracy: 0.078\n",
+            "[10/100] Loss 2.168979, Top-1 Accuracy: 0.188\n",
+            "[20/100] Loss 2.047866, Top-1 Accuracy: 0.234\n",
+            "[30/100] Loss 1.905376, Top-1 Accuracy: 0.297\n",
+            "[40/100] Loss 1.783959, Top-1 Accuracy: 0.281\n",
+            "[50/100] Loss 1.704256, Top-1 Accuracy: 0.328\n",
+            "[60/100] Loss 1.361978, Top-1 Accuracy: 0.484\n",
+            "[70/100] Loss 0.993582, Top-1 Accuracy: 0.688\n",
+            "[80/100] Loss 0.753738, Top-1 Accuracy: 0.828\n",
+            "[90/100] Loss 0.434923, Top-1 Accuracy: 0.906\n"
+          ]
+        }
+      ],
       "source": [
         "\n",
         "learning_rate = 5e-4  # Experiment with this\n",
@@ -1069,12 +1090,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {
         "id": "8mrgWcfEE8XE",
-        "test": "vit_overfit_accuracy"
+        "test": "vit_overfit_accuracy",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3383e949-4055-4b52-8087-6d63e72720e4"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overfitting ViT on one batch. Top-1 accuracy: 0.984375\n"
+          ]
+        }
+      ],
       "source": [
         "# You should get perfect 1.00 accuracy\n",
         "print(f\"Overfitting ViT on one batch. Top-1 accuracy: {top1}\")"
